# Snake_game

./: .gitignore  CMakeLists.txt  README.md
images/: title-screen.png~
src/: Food.cpp  Game.cpp  Snake.cpp  SnakeSegment.cpp  Sounds.cpp  Texture.cpp  assist.cpp  assist.h  main.cpp
src/headers/: Food.h  Game.h  Snake.h  SnakeSegment.h  Sounds.h  Texture.h  assist.h
